--- a/feature/web/decox_design/mau_nha_dep.html
+++ b/feature/web/decox_design/mau_nha_dep.html
@@ -404,41 +404,50 @@
                 <div class="header__nav flex-middle">
                     <nav>
                         <ul>
-                            <li><a href="#" class="flex-middle flex-col px-8 py-8 hover-gray" style="width: 76px;">
+                            <li><a href="./mau_nha_dep.html" class="flex-middle flex-col px-8 py-8 hover-gray"
+                                    style="width: 76px;">
                                     <span><img src="./img/mau-nha-dep.svg" alt="mẫu nhà đẹp" width="36px"
                                             height="36px"></span>
                                     <span class="upcase fs-10 fw-600">mẫu nhà đẹp</span>
                                 </a></li>
-                            <li><a href="#" class="flex-middle flex-col px-8 py-8 hover-gray" style="width: 76px;">
+                            <li><a href="./mau_nha_dep.html" class="flex-middle flex-col px-8 py-8 hover-gray"
+                                    style="width: 76px;">
                                     <span><img src="./img/phong-khach.svg" alt="phòng khách" width="36px"
                                             height="36px"></span>
                                     <span class="upcase fs-10 fw-600">phòng khách</span>
                                 </a></li>
-                            <li><a href="#" class="flex-middle flex-col px-8 py-8 hover-gray" style="width: 76px;">
+                            <li><a href="./mau_nha_dep.html" class="flex-middle flex-col px-8 py-8 hover-gray"
+                                    style="width: 76px;">
                                     <span><img src="./img/phong-bep.svg" alt="" width="36px" height="36px"></span>
                                     <span class="upcase fs-10 fw-600">phòng bếp</span>
                                 </a></li>
-                            <li><a href="#" class="flex-middle flex-col px-8 py-8 hover-gray" style="width: 76px;">
+                            <li><a href="./mau_nha_dep.html" class="flex-middle flex-col px-8 py-8 hover-gray"
+                                    style="width: 76px;">
                                     <span><img src="./img/phong-ngu.svg" alt="" width="36px" height="36px"></span>
                                     <span class="upcase fs-10 fw-600">phòng ngủ</span>
                                 </a></li>
-                            <li><a href="#" class="flex-middle flex-col px-8 py-8 hover-gray" style="width: 76px;">
+                            <li><a href="./mau_nha_dep.html" class="flex-middle flex-col px-8 py-8 hover-gray"
+                                    style="width: 76px;">
                                     <span><img src="./img/tre-em.svg" alt="" width="36px" height="36px"></span>
                                     <span class="upcase fs-10 fw-600">trẻ em</span>
                                 </a></li>
-                            <li><a href="#" class="flex-middle flex-col px-8 py-8 hover-gray" style="width: 76px;">
+                            <li><a href="./mau_nha_dep.html" class="flex-middle flex-col px-8 py-8 hover-gray"
+                                    style="width: 76px;">
                                     <span><img src="./img/giat-phoi.svg" alt="" width="36px" height="36px"></span>
                                     <span class="upcase fs-10 fw-600">giặt phơi</span>
                                 </a></li>
-                            <li><a href="#" class="flex-middle flex-col px-8 py-8 hover-gray" style="width: 76px;">
+                            <li><a href="./mau_nha_dep.html" class="flex-middle flex-col px-8 py-8 hover-gray"
+                                    style="width: 76px;">
                                     <span><img src="./img/rest-room.svg" alt="" width="36px" height="36px"></span>
                                     <span class="upcase fs-10 fw-600">rest room</span>
                                 </a></li>
-                            <li><a href="#" class="flex-middle flex-col px-8 py-8 hover-gray" style="width: 76px;">
+                            <li><a href="./mau_nha_dep.html" class="flex-middle flex-col px-8 py-8 hover-gray"
+                                    style="width: 76px;">
                                     <span><img src="./img/phong-lam-viec.png" alt="" width="36px" height="36px"></span>
                                     <span class="upcase fs-10 fw-600">làm việc</span>
                                 </a></li>
-                            <li><a href="#" class="flex-middle flex-col px-8 py-8 hover-gray" style="width: 76px;">
+                            <li><a href="./mau_nha_dep.html" class="flex-middle flex-col px-8 py-8 hover-gray"
+                                    style="width: 76px;">
                                     <span><img src="./img/phong-giai-tri.png" alt="" width="36px" height="36px"></span>
                                     <span class="upcase fs-10 fw-600">giải trí</span>
                                 </a></li>
@@ -454,6 +463,11 @@
             <div class="masonry-col masonry-col-2"></div>
             <div class="masonry-col masonry-col-3"></div>
             <div class="masonry-col masonry-col-4"></div>
+        </div>
+        <div class="flex-middle mb-60 w100">
+            <div>
+                <div class="btn__decox" onclick="showMore()">Hiển thị thêm</div>
+            </div>
         </div>
     </section>
 
