--- a/feature/web/decox_design/decox_design.html
+++ b/feature/web/decox_design/decox_design.html
@@ -20,7 +20,9 @@
                 <div class="bg__logo flex w100-1200 justify-between-1200">
                     <div class="flex">
                         <div class="flex-middle px-40 ">
-                            <img src="./img/decoxdesign.svg" alt="Logo" width="132px" height="28px">
+                            <a href="./decox_design.html">
+                                <img src="./img/decoxdesign.svg" alt="Logo" width="132px" height="28px">
+                            </a>
                         </div>
                         <div class="menu relative flex-middle px-20 py-20 text-white">
                             <div class="fs-20 mr-12">Menu</div>
