--- a/feature/web/decox_design/mau_nha_dep.html
+++ b/feature/web/decox_design/mau_nha_dep.html
@@ -459,6 +459,10 @@
             </div>
     </header>
 
+    <div class="flex bg-gray px-12 py-12 ml-60 mr-60 mt-20">
+        Trang chủ > Mẫu nhà đẹp
+    </div>
+
     <section>
         <div class="masonry px-60 py-60">
             <div class="masonry-col masonry-col-1"></div>
@@ -468,7 +472,7 @@
         </div>
         <div class="flex-middle mb-60 w100">
             <div>
-                <div class="btn__decox" onclick="showMore()">Hiển thị thêm</div>
+                <div class="btn__decox" onclick="showMore()">Xem thêm</div>
             </div>
         </div>
     </section>
