--- a/feature/web/decox_design/decox_design.html
+++ b/feature/web/decox_design/decox_design.html
@@ -736,7 +736,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="grid gap-20 " style="grid-template-columns: 2fr 2fr 1fr;">
+            <div class="foot grid gap-20 " style="grid-template-columns: 2fr 2fr 1fr;">
                 <div class="flex flex-col">
                     <div class="grid col-2 gap-20">
                         <div class="flex-middle py-60">
